--- a/css/footer.css
+++ b/css/footer.css
@@ -1,29 +1,27 @@
-$font-mulish: 'Mulish', sans-serif;
-$text-main-color: #FFF;
 html, body {
-  overflow-x: hidden;
-}
+  overflow-x: hidden; }
+
 footer {
   padding-bottom: 80px;
-  background: #2B2B2B /* url(../img/bg/womanbg.png) no-repeat*/ ;
-  background-position: 396px 5px;
-}
+  background: #2B2B2B;
+  background-position: 396px 5px; }
+
 .footer__title {
-  font: 100% $font-mulish;
+  font: 100% "Mulish", sans-serif;
   color: #2A2A2A;
   font-weight: 500;
   font-size: 20px;
-  line-height: 24px;
-}
+  line-height: 24px; }
+
 .footer__description {
-  font: 100% $font-mulish;
+  font: 100% "Mulish", sans-serif;
   color: #2A2A2A;
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
   opacity: 0.8;
-  margin: 12px 0 20px 0;
-}
+  margin: 12px 0 20px 0; }
+
 .footer__input {
   box-sizing: border-box;
   width: 280px;
@@ -32,42 +30,43 @@ footer {
   border: 2px solid rgba(53, 53, 53, 0.1);
   border-radius: 4px;
   margin-bottom: 12px;
-  font: 100% $font-mulish;
+  font: 100% "Mulish", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   color: rgba(0, 0, 0, 0.2);
-  padding-left: 24px;
-}
+  padding-left: 24px; }
+
 .footer__form {
   display: flex;
   flex-direction: column;
-/*  background: url(../img/bg/womanbg.png) no-repeat;
-  background-position: -94px 35px; */
-}
+  /*  background: url(../img/bg/womanbg.png) no-repeat;
+    background-position: -94px 35px; */ }
+
 .footer__ps {
-  font: 100% $font-mulish;
+  font: 100% "Mulish", sans-serif;
   color: #000000;
   font-weight: 400;
   font-size: 8px;
   line-height: 10px;
   opacity: 0.2;
   width: 320px;
-  margin-top: 12px;
-}
+  margin-top: 12px; }
+
 .footer_img_woman {
   position: absolute;
   top: 2420px;
   left: 490px;
   object-fit: cover;
-  height: 460px;
-}
+  height: 460px; }
+
 .footer_img_womanbg {
   position: absolute;
   top: 2465px;
-  left: 396px;
-}
+  left: 396px; }
+
 .footer__feedback {
   background: #FFFFFF;
-  padding: 24px 20px 40px 20px;
-}
+  padding: 24px 20px 40px 20px; }
+
+/*# sourceMappingURL=footer.css.map */
