--- a/css/header.css
+++ b/css/header.css
@@ -1,20 +1,17 @@
-$font-mulish: 'Mulish', sans-serif;
-$text-main-color: #FFF;
-
 header {
-  background:linear-gradient(180deg, rgba(43, 43, 43, 0) 8.03%, #2B2B2B 86.91%), url(../img/bg/bg1.png);
+  background: linear-gradient(180deg, rgba(43, 43, 43, 0) 8.03%, #2B2B2B 86.91%), url(../img/bg/bg1.png);
   background-position: 50% -100%;
   height: 540px;
-  padding: 20px 20px 0 20px;
-}
+  padding: 20px 20px 0 20px; }
+
 .header__menu {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-}
+  align-items: center; }
+
 .menu__mobile_menu {
-  display: flex;
-}
+  display: flex; }
+
 .mobile_menu__phone {
   background: rgba(0, 0, 0, 0.1);
   border-radius: 4px;
@@ -23,8 +20,8 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: 4px;
-}
+  margin-right: 4px; }
+
 .mobile_menu__button {
   width: 75px;
   height: 32px;
@@ -32,74 +29,71 @@ header {
   align-items: center;
   justify-content: center;
   background: rgba(0, 0, 0, 0.1);
-  border-radius: 4px;
-}
+  border-radius: 4px; }
+
 .mobile_menu__button__text {
-  font: 100% $font-mulish;
-  color: $text-main-color;
+  font: 100% "Mulish", sans-serif;
+  color: #FFF;
   font-weight: 400;
   font-size: 12px;
-  line-height: 16px;
-}
+  line-height: 16px; }
+
 .mobile_menu__button__text_dots {
-  font: 100% $font-mulish;
-  color: $text-main-color;
+  font: 100% "Mulish", sans-serif;
+  color: #FFF;
   transform: rotate(90deg);
   font-weight: 400;
   font-size: 16px;
   line-height: 16px;
-  margin-left: 9px;
-}
-.header__head {
+  margin-left: 9px; }
 
-}
 .head__title {
   max-width: 267px;
-  font: 100% $font-mulish;
-  color: $text-main-color;
+  font: 100% "Mulish", sans-serif;
+  color: #FFF;
   font-weight: 500;
   font-size: 28px;
   line-height: 32px;
   text-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   text-align: left;
   margin-top: 28px;
-  margin-bottom: 16px;
-}
+  margin-bottom: 16px; }
+
 .head__description {
   max-width: 225px;
-  font: 100% $font-mulish;
-  color: $text-main-color;
+  font: 100% "Mulish", sans-serif;
+  color: #FFF;
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
   text-align: left;
-  margin-bottom: 16px;
-}
+  margin-bottom: 16px; }
+
 .header__filter {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 280px;
-}
+  width: 280px; }
+
 .filter_buttons {
   display: flex;
   justify-content: flex-start;
   position: relative;
   left: -283px;
-  top: 63px;
-}
+  top: 63px; }
+
 .filter_buttons__button {
   border: none;
   background: rgba(0, 0, 0, 0.2);
   border-radius: 4px 4px 0px 0px;
-  font: 100% $font-mulish;
-  color: #FFFFFF;
-}
+  font: 100% "Mulish", sans-serif;
+  color: #FFFFFF; }
+
 .filter__inputs {
   display: flex;
   flex-direction: column;
-  align-items: center;
-}
+  align-items: center; }
+
 .inputs__search {
   width: 80px;
   height: 48px;
@@ -107,13 +101,10 @@ header {
   border-radius: 4px;
   display: flex;
   align-items: center;
-  justify-content: center;
-}
-.search {
+  justify-content: center; }
 
-}
 .search_button {
-  font: 100% $font-mulish;
+  font: 100% "Mulish", sans-serif;
   color: #000000;
   font-weight: 400;
   font-size: 16px;
@@ -122,8 +113,8 @@ header {
   height: 48px;
   background: #FCB216;
   border-radius: 4px;
-  border: none;
-}
+  border: none; }
+
 .inputs__select {
   width: 280px;
   height: 56px;
@@ -131,24 +122,24 @@ header {
   margin: 0;
   border: none;
   padding: 0 0 0 24px;
-  font: 100% $font-mulish;
+  font: 100% "Mulish", sans-serif;
   color: rgba(0, 0, 0, 0.75);
   font-weight: 400;
   font-size: 16px;
-  line-height: 24px;
-}
+  line-height: 24px; }
+
 .select__option {
-  width: 280px;
-}
+  width: 280px; }
+
 .top {
-  border-radius: 4px 4px 0px 0px;
-}
+  border-radius: 4px 4px 0px 0px; }
+
 .middle {
-  border-radius: 0px;
-}
+  border-radius: 0px; }
+
 .bottom {
-  border-radius: 0px 0px 4px 4px;
-}
+  border-radius: 0px 0px 4px 4px; }
+
 .filter__button {
   width: 280px;
   height: 56px;
@@ -156,62 +147,62 @@ header {
   border-radius: 4px;
   border: none;
   cursor: pointer;
-  font: 100% $font-mulish;
+  font: 100% "Mulish", sans-serif;
   color: #000000;
   margin-top: 12px;
-  margin-bottom: 16px;
-}
+  margin-bottom: 16px; }
+
 .filter__button:hover {
-  box-shadow: 0px 0px 10px rgba(255, 195, 69, 0.45);
-}
+  box-shadow: 0px 0px 10px rgba(255, 195, 69, 0.45); }
+
 .filter__advanced_button {
   width: 175px;
   height: 24px;
   text-decoration: none;
   display: flex;
   align-items: center;
-  justify-content: center;
-}
+  justify-content: center; }
+
 .filter__advanced_button__inner {
-  font: 100% $font-mulish;
+  font: 100% "Mulish", sans-serif;
   font-size: 16px;
   line-height: 24px;
   color: rgba(255, 255, 255, 0.8);
   background: inherit;
   text-decoration: none;
-  border-bottom: 1px dashed rgba(255, 255, 255, 0.5);
-}
+  border-bottom: 1px dashed rgba(255, 255, 255, 0.5); }
+
 .advanced_button__search_icon {
-  margin-left: 5px;
-}
+  margin-left: 5px; }
+
 .mobile_menu__optional_buttons {
-  display: flex;
-}
+  display: flex; }
+
 .optional_buttons__lang {
   width: 57px;
   height: 31px;
   background: rgba(0, 0, 0, 0.14);
   border-radius: 4px;
   border: none;
-  font: 100% $font-mulish;
+  font: 100% "Mulish", sans-serif;
   color: #FFFFFF;
   font-weight: 400;
   font-size: 12px;
-  line-height: 16px;
-}
+  line-height: 16px; }
+
 .optional_buttons__cur {
   width: 48px;
   height: 31px;
   background: rgba(0, 0, 0, 0.14);
   border-radius: 4px;
   border: none;
-  font: 100% $font-mulish;
+  font: 100% "Mulish", sans-serif;
   color: #FFFFFF;
   font-weight: 400;
   font-size: 12px;
   line-height: 16px;
-  margin: 0 2px 0 2px;
-}
+  margin: 0 2px 0 2px; }
+
 .optional_buttons__soc {
   width: 91px;
   height: 31px;
@@ -220,8 +211,8 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin-right: 2px;
-}
+  margin-right: 2px; }
+
 .optional_buttons__call {
   width: 140px;
   height: 31px;
@@ -229,16 +220,16 @@ header {
   align-items: center;
   justify-content: center;
   background: rgba(0, 0, 0, 0.14);
-  border-radius: 4px;
-}
+  border-radius: 4px; }
+
 .optional_buttons__phone {
   text-decoration: none;
-  font: 100% $font-mulish;
+  font: 100% "Mulish", sans-serif;
   color: #FFFFFF;
   font-weight: 400;
   font-size: 12px;
-  line-height: 16px;
-}
+  line-height: 16px; }
+
 .mobile_menu__controls {
   width: 566px;
   height: 32px;
@@ -246,13 +237,14 @@ header {
   justify-content: space-around;
   align-items: center;
   background: rgba(0, 0, 0, 0.1);
-  border-radius: 4px;
-}
+  border-radius: 4px; }
+
 .controls_button {
   text-decoration: none;
-  font: 100% $font-mulish;
+  font: 100% "Mulish", sans-serif;
   color: #FFFFFF;
   font-weight: 400;
   font-size: 12px;
-  line-height: 16px;
-}
+  line-height: 16px; }
+
+/*# sourceMappingURL=header.css.map */
