--- a/css/promotions.css
+++ b/css/promotions.css
@@ -1,22 +1,19 @@
-$font-mulish: 'Mulish', sans-serif;
-$text-main-color: #FFF;
-
 .promotions {
   background: #2B2B2B;
-  padding-top: 80px;
-}
+  padding-top: 80px; }
+
 .promotions__title {
-  font: 100% $font-mulish;
-  color: $text-main-color;
+  font: 100% "Mulish", sans-serif;
+  color: #FFF;
   font-weight: 500;
   font-size: 24px;
   line-height: 28px;
   margin-bottom: 24px;
   text-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-  padding: 0 20px 0 20px;
-}
+  padding: 0 20px 0 20px; }
+
 .promotions__view_all {
-  font: 100% $font-mulish;
+  font: 100% "Mulish", sans-serif;
   color: #000000;
   font-weight: 400;
   font-size: 16px;
@@ -29,14 +26,14 @@ $text-main-color: #FFF;
   border-radius: 4px;
   margin-bottom: 32px;
   cursor: pointer;
-  margin-left: 20px;
-}
+  margin-left: 20px; }
+
 .promotions__view_all_tablet {
-  display: none;
-}
+  display: none; }
+
 .promotions__view_all:hover, .promotions__form_button:hover {
-  box-shadow: 0px 0px 10px rgba(255, 195, 69, 0.45);
-}
+  box-shadow: 0px 0px 10px rgba(255, 195, 69, 0.45); }
+
 .promotions__form {
   box-sizing: border-box;
   width: 320px;
@@ -45,59 +42,55 @@ $text-main-color: #FFF;
   border: 2px solid #353535;
   display: flex;
   flex-direction: column;
-  align-items: center;
-}
+  align-items: center; }
+
 .promotions__form_form {
   display: flex;
-  flex-direction: column;
-}
+  flex-direction: column; }
+
 .promotions__form_title {
-  font: 100% $font-mulish;
-  color: $text-main-color;
+  font: 100% "Mulish", sans-serif;
+  color: #FFF;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
   text-align: center;
-  margin-top: 24px;
-}
-.promotions__slider {
-  .promotions_gallery {
-    padding-left: 20px;
-  	display: grid;
-  	grid-template-columns: repeat(10, 230px);
-  	grid-template-rows: 1fr;
-  	grid-column-gap: 1rem;
-  	grid-row-gap: 1rem;
-  	overflow: scroll;
-  	height: 342px;
-  	scroll-snap-type: both mandatory;
-  	scroll-padding: 1rem;
-    margin: 0;
-  }
-  .active {
-  	scroll-snap-type: unset;
-  }
-  li {
-  	scroll-snap-align: center;
-  	display: inline-block;
-  	border-radius: 3px;
-  	font-size: 0;
-    filter: drop-shadow(0px 8px 15px rgba(0, 0, 0, 0.1));
-    border-radius: 4px;
-    width: 230px;
-    height: 320px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-}
+  margin-top: 24px; }
+
+.promotions__slider .promotions_gallery {
+  padding-left: 20px;
+  display: grid;
+  grid-template-columns: repeat(10, 230px);
+  grid-template-rows: 1fr;
+  grid-column-gap: 1rem;
+  grid-row-gap: 1rem;
+  overflow: scroll;
+  height: 342px;
+  scroll-snap-type: both mandatory;
+  scroll-padding: 1rem;
+  margin: 0; }
+.promotions__slider .active {
+  scroll-snap-type: unset; }
+.promotions__slider li {
+  scroll-snap-align: center;
+  display: inline-block;
+  border-radius: 3px;
+  font-size: 0;
+  filter: drop-shadow(0px 8px 15px rgba(0, 0, 0, 0.1));
+  border-radius: 4px;
+  width: 230px;
+  height: 320px;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
 .promotions_gallery_img {
   width: 228px;
-  height: 320px;
-}
+  height: 320px; }
+
 .promotions_gallery_img__description {
-  font: 100% $font-mulish;
-  color: $text-main-color;
+  font: 100% "Mulish", sans-serif;
+  color: #FFF;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -108,22 +101,20 @@ $text-main-color: #FFF;
   width: 200px;
   position: absolute;
   top: 10px;
-  left: 14px;
-  .description_compilation {
+  left: 14px; }
+  .promotions_gallery_img__description .description_compilation {
     height: 20px;
-    color: rgba(255, 255, 255, 0.5);
-  }
-  .description_top {
+    color: rgba(255, 255, 255, 0.5); }
+  .promotions_gallery_img__description .description_top {
     height: 72px;
     font-size: 20px;
     line-height: 24px;
-    text-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-  }
-}
+    text-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); }
+
 .promotions__form_input {
   width: 232px;
   height: 56px;
-  font: 100% $font-mulish;
+  font: 100% "Mulish", sans-serif;
   color: rgba(0, 0, 0, 0.2);
   font-weight: 400;
   font-size: 16px;
@@ -131,14 +122,14 @@ $text-main-color: #FFF;
   border-radius: 4px;
   border: none;
   padding: 0 24px 0 24px;
-  margin: 12px 0 12px 0;
-}
+  margin: 12px 0 12px 0; }
+
 .promotions__form_input:focus {
   color: #000000;
-  border: none;
-}
+  border: none; }
+
 .promotions__form_button {
-  font: 100% $font-mulish;
+  font: 100% "Mulish", sans-serif;
   color: #000000;
   font-weight: 400;
   font-size: 16px;
@@ -148,16 +139,17 @@ $text-main-color: #FFF;
   background: #FCB216;
   border: 2px solid #FCB216;
   border-radius: 4px;
-  cursor: pointer;
-}
+  cursor: pointer; }
+
 .promotions__form_ps {
   max-width: 276px;
-  font: 100% $font-mulish;
-  color: $text-main-color;
+  font: 100% "Mulish", sans-serif;
+  color: #FFF;
   font-weight: 400;
   font-size: 8px;
   line-height: 10px;
   opacity: 0.2;
   margin-top: 8px;
-  text-align: center;
-}
+  text-align: center; }
+
+/*# sourceMappingURL=promotions.css.map */
