--- a/css/footer.css
+++ b/css/footer.css
@@ -4,7 +4,8 @@ html, body {
 footer {
   padding-bottom: 80px;
   background: #2B2B2B;
-  background-position: 396px 5px; }
+  background-position: 396px 5px;
+  overflow: hidden; }
 
 .footer__title {
   font: 100% "Mulish", sans-serif;
@@ -40,8 +41,7 @@ footer {
 .footer__form {
   display: flex;
   flex-direction: column;
-  /*  background: url(../img/bg/womanbg.png) no-repeat;
-    background-position: -94px 35px; */ }
+  align-items: center; }
 
 .footer__ps {
   font: 100% "Mulish", sans-serif;
@@ -57,8 +57,10 @@ footer {
   position: absolute;
   top: 2420px;
   left: 490px;
+  width: 278px;
+  height: 460px;
   object-fit: cover;
-  height: 460px; }
+  object-position: -2px 0px; }
 
 .footer_img_womanbg {
   position: absolute;
@@ -68,5 +70,8 @@ footer {
 .footer__feedback {
   background: #FFFFFF;
   padding: 24px 20px 40px 20px; }
+
+.footer_img_womanbg_desktop {
+  display: none; }
 
 /*# sourceMappingURL=footer.css.map */
