--- a/css/header.scss
+++ b/css/header.scss
@@ -33,6 +33,7 @@ header {
   justify-content: center;
   background: rgba(0, 0, 0, 0.1);
   border-radius: 4px;
+  z-index: 10;
 }
 .mobile_menu__button__text {
   font: 100% $font-mulish;
@@ -79,7 +80,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 280px;
+  width: 87.5vw;
 }
 .filter_buttons {
   display: flex;
@@ -136,6 +137,17 @@ header {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
+  appearance: none;
+  outline: none;
+  option {
+    color: #000;
+  }
+}
+.top, .middle:not([multiple]) {
+  background-repeat: no-repeat;
+  background-position: calc(100% - 1em) 1.35em;
+  background-size: 0.85em auto;
+  background-image: url(../img/icons/arrow2.svg);
 }
 .select__option {
   width: 280px;
@@ -247,6 +259,62 @@ header {
   align-items: center;
   background: rgba(0, 0, 0, 0.1);
   border-radius: 4px;
+}
+.controls_button {
+  text-decoration: none;
+  font: 100% $font-mulish;
+  color: #FFFFFF;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+}
+#navigation__toggle {
+  opacity: 0;
+  position: absolute;
+}
+#navigation__toggle:checked ~ .navigation__box {
+  left: 0 !important;
+}
+.navigation__btn {
+  top: 20px;
+  left: 240px;
+  width: 26px;
+  height: 26px;
+  cursor: pointer;
+  z-index: 1;
+}
+.navigation__btn > span,
+.navigation__btn > span::before,
+.navigation__btn > span::after {
+  display: block;
+  transition-duration: .25s;
+}
+.navigation__box {
+  display: block;
+  position: fixed;
+  top: 55px;
+  left: 100%;
+  width: 100vw;
+  height: 100%;
+  margin: 0;
+  padding: 80px 0;
+  list-style: none;
+  background-color: rgba(0, 0, 0, 0.7);
+  transition-duration: .25s;
+  z-index: 1;
+  li {
+    height: 55px;
+  }
+}
+.box__item {
+  display: block;
+  padding: 12px 24px;
+  font: 100% $font-mulish;
+  color: #FFFFFF;
+  font-size: 20px;
+  font-weight: 500;
+  text-decoration: none;
+  transition-duration: .25s;
 }
 .controls_button {
   text-decoration: none;
