--- a/css/media.scss
+++ b/css/media.scss
@@ -7,6 +7,12 @@ $text-main-color: #FFF;
       display: none;
     }
   }
+  .bottom:not([multiple]) {
+    background-repeat: no-repeat;
+    background-position: calc(100% - 1em) 1.35em;
+    background-size: 0.85em auto;
+    background-image: url(../img/icons/arrow2.svg);
+  }
 }
 @media (max-width: 767px) {
   .mobile_menu__optional_buttons {
@@ -61,6 +67,11 @@ $text-main-color: #FFF;
     width: 100%;
     justify-content: space-between;
   }
+  .navigation__box {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+  }
   .filter__button {
     display: none;
   }
@@ -77,7 +88,7 @@ $text-main-color: #FFF;
   .top {
     border-radius: 8px 0px 0px 8px;
   }
-  .bot {
+  .bottom {
     border-radius: 0px 8px 8px 0px;
   }
   .filter__inputs {
@@ -288,6 +299,7 @@ $text-main-color: #FFF;
     height: 56px;
     .footer__form_button {
       margin-right: 4px;
+      z-index: 2;
     }
   }
   .filter_buttons {
@@ -295,6 +307,36 @@ $text-main-color: #FFF;
   }
   .search_button {
     display: none;
+  }
+}
+@media (min-width: 820px) {
+  .footer_img_woman {
+    left: 542px;
+  }
+  .footer_img_womanbg {
+    left: 448px;
+  }
+}
+@media (min-width: 912px) {
+  .footer_img_woman {
+    left: 634px;
+  }
+  .footer_img_womanbg {
+    left: 540px;
+  }
+  .promotions__form {
+    margin-left: 175px;
+  }
+}
+@media (min-width: 1024px) {
+  .footer_img_woman {
+    left: 746px;
+  }
+  .footer_img_womanbg {
+    left: 652px;
+  }
+  .promotions__form {
+    margin-left: 240px;
   }
 }
 @media (max-width: 1199px) {
@@ -308,6 +350,9 @@ $text-main-color: #FFF;
 @media (min-width: 1200px) {
   .mobile_menu__button {
     display: none;
+  }
+  .filter_buttons {
+    display: block;
   }
   .head__title {
     max-width: 600px;
@@ -353,9 +398,9 @@ $text-main-color: #FFF;
   }
   .gallery {
     padding-left: 100px;
-    grid-template-columns: repeat(3, 25vw);
+    grid-template-columns: repeat(3, 26vw);
     grid-template-rows: 200px;
-    height: 434px;
+    height: 452px;
   }
   .hot_offers__view_all {
     margin-left: 40vw;
@@ -413,7 +458,7 @@ $text-main-color: #FFF;
     height: 506px;
      .benefits_gallery {
        grid-template-columns: repeat(3, 315px);
-       height: 430px;
+       height: 450px;
        justify-content: center;
        align-items: center;
      }
@@ -438,23 +483,52 @@ $text-main-color: #FFF;
    }
    footer {
      /* background: #2B2B2B; */
-     padding: 0px 100px 0px 100px;
+     padding: 0px 100px 78px 100px;
      display: flex;
      flex-direction: column;
      align-items: flex-start;
    }
    .footer__feedback {
-     width: 960px;
+     padding: 40px 40px 40px 56px;
+     width: 900px;
      border-radius: 20px;
-     border: 2px solid #FCB216;
-     border-radius: 30px;
    }
    .footer_img_womanbg {
-     top: 3080px;
-     left: 810px;
+     display: none;
+   }
+   .footer_img_womanbg_desktop {
+     display: block;
+     position: absolute;
+     top: 3065px;
+     left: 485px;
+     z-index: 1;
    }
    .footer_img_woman {
-     top: 3030px;
-     left: 810px;
+     top: 3000px;
+     left: 675px;
+     z-index: 2;
+     height: 500px;
+     width: auto;
    }
+   .feedback__border {
+     opacity: 0.5;
+     border: 2px solid #FCB216;
+     border-radius: 30px;
+     width: 980px;
+     height: 392px;
+   }
+}
+@media (min-width: 1280px) {
+  .footer_img_woman {
+    left: 746px;
+  }
+  .footer_img_womanbg {
+    left: 652px;
+  }
+  .promotions__form {
+    margin-left: 90px;
+  }
+  .promotions__form_ps {
+    top: 1805px;
+  }
 }
