--- a/css/promotions.scss
+++ b/css/promotions.scss
@@ -39,7 +39,7 @@ $text-main-color: #FFF;
 }
 .promotions__form {
   box-sizing: border-box;
-  width: 320px;
+  width: 100vw;
   height: 260px;
   background: #353535;
   border: 2px solid #353535;
@@ -59,6 +59,7 @@ $text-main-color: #FFF;
   line-height: 20px;
   text-align: center;
   margin-top: 24px;
+  width: 87.5vw;
 }
 .promotions__slider {
   .promotions_gallery {
@@ -66,14 +67,16 @@ $text-main-color: #FFF;
   	display: grid;
   	grid-template-columns: repeat(10, 230px);
   	grid-template-rows: 1fr;
-  	grid-column-gap: 1rem;
+  	grid-column-gap: 0px;
   	grid-row-gap: 1rem;
   	overflow: scroll;
   	height: 342px;
   	scroll-snap-type: both mandatory;
   	scroll-padding: 1rem;
     margin: 0;
+    scrollbar-width: none;
   }
+  .promotions_gallery::-webkit-scrollbar { width: 0; }
   .active {
   	scroll-snap-type: unset;
   }
